app/static/css/form.css
* {
  margin: 0;
  padding: 0;
}

.container {
  font-family: "FS Albert Pro", sans-serif;
  color: #ffffff;
  background-image: url("/static/images/celular/tela1/fundo_1_notext.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 100vh;
  padding: 2rem;
  box-sizing: border-box;
}

.header {
  width: 100%;
  margin-bottom: 4rem;
  margin-top: 15%;
  min-height: 2rem;
}

.header img {
  width: 80%;
}

.content {
  margin-top: 40%;
  width: 100%;
  display: flex;
  flex-direction: column;
  font-size: 4rem;
}

.content input:not([type="checkbox"]) {
  width: 90%;
  padding: 1.3rem;
  font-size: 3rem;
  border: none;
  margin-bottom: 3rem;
  background-color: #FF9C00;
  color: white;
}

.content input[type="checkbox"] {
  width: 2rem;
  height: 2rem;
  appearance: none;
  -webkit-appearance: none;
  position: relative;
  border: none;
  border-radius: 3px;
  background: #CFCFCF;
  cursor: pointer;
  vertical-align: middle;
}

.content input[type="checkbox"]:checked {
    background: #FF9C00;
}

.content input[type="checkbox"]:checked::after {
    content: '';
    position: absolute;
    left: 50%;
    top: 45%;
    width: 0.3rem;
    height: 0.6rem;
    border: solid #fff;
    border-width: 0 2px 2px 0;
    transform: translate(-50%, -50%) rotate(45deg);
}

label[for="terms"] {
  font-size: 2rem !important;
}

span {
  text-decoration: underline;
  cursor: pointer;
}

.checkbox {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  gap: 1rem;
}



.button_container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 5rem;
}

.button_container img {
  cursor: pointer;
}

.field-error {
  color: #ffdddd;
  font-size: 1.2rem;
  font-weight: bold;
  margin-top: -2rem;
  margin-bottom: 1.5rem;
  min-height: 1.5rem;
}

.form-status {
  font-size: 1.5rem;
  font-weight: bold;
  text-align: center;
  min-height: 1.5rem;
}

.form-status.error {
  color: #ffdddd;
}

.form-status.success {
  color: #d4ffd4;
}

